turn on hub
